--- a/crm/templates/home.html
+++ b/crm/templates/home.html
@@ -1,37 +1,61 @@
 {% extends 'base.html' %} {% block content %}
-<div class="col-md-6 offset-3">
-  {% if user.is_authenticated %}
 
-  <h1>Hello World!</h1>
+    {% if not user.is_authenticated %}
+        <div class="col-md-6 offset-3">
+            <h2>Login</h2>
+            <br>
+            <form action="{% url 'home' %}" method="POST">
+                {% csrf_token %}
+                <div class="form-group mb-3">
+                    <label for="username">Username</label>
+                    <input type="text" class="form-control" name="username" id="username" placeholder="Enter username"
+                           required/>
+                </div>
+                <div class="form-group mb-3">
+                    <label for="password">Password</label>
+                    <input type="password" class="form-control" name="password" id="password" placeholder="Password"
+                           required/>
+                </div>
+                <button type="submit" class="btn btn-secondary">Login</button>
+            </form>
+        </div>
+    {% endif %}
+    {% if user.is_authenticated %}
+        <h2>Customer Records</h2>
+        <table class="table table-hover table-bordered table-striped">
+            <thead class="table-dark">
+            <tr>
+                <th scope="col">ID</th>
+                <th scope="col">First Name</th>
+                <th scope="col">Last Name</th>
+                <th scope="col">Email</th>
+                {#    <th scope="col">Phone Number</th>#}
+                <th scope="col">Address</th>
+                <th scope="col">City</th>
+                <th scope="col">State</th>
+                {#    <th scope="col">Zip Code</th>#}
+                <th scope="col">Created at</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% if records %}
+                {% for record in records %}
+                    <tr>
+                        <th scope="row"><a href="{% url 'view_record' record.id %}">{{ record.id }}</a></th>
+                        <td>{{ record.first_name }}</td>
+                        <td>{{ record.last_name }}</td>
+                        <td>{{ record.email }}</td>
+                        {#    <td>{{ record.phone_number }}</td>#}
+                        <td>{{ record.address }}</td>
+                        <td>{{ record.city }}</td>
+                        <td>{{ record.state }}</td>
+                        {#    <td>{{ record.zip_code }}</td>#}
+                        <td>{{ record.created_at }}</td>
+                    </tr>
+                {% endfor %}
+            {% endif %}
+            </tbody>
+        </table>
 
-  {% else %}
-
-  <h1>Login</h1>
-  <form action="{% url 'home' %}" method="POST">
-    {% csrf_token %}
-    <div class="form-group mb-3">
-      <label for="username">Username</label>
-      <input
-        type="text"
-        class="form-control"
-        name="username"
-        id="username"
-        placeholder="Enter username"
-        required
-      />
-    </div>
-    <div class="form-group mb-3">
-      <label for="password">Password</label>
-      <input
-        type="password"
-        class="form-control"
-        name="password"
-        id="password"
-        placeholder="Password"
-        required
-      />
-    </div>
-    <button type="submit" class="btn btn-secondary">Login</button>
-  </form>
-</div>
-{% endif %} {% endblock %}
+    {% endif %}
+{% endblock %}
