--- a/crm/templates/register.html
+++ b/crm/templates/register.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% block content %}
-    <div class="col-md-6 offset-3">
+    <div class="col-md-6 mb-3  offset-3">
         <h1>Register</h1>
         <br/>
         <form action="{% url 'register' %}" method="POST">
